{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 528,
  "lineage": "10c75331-9c9b-6e57-c15f-0b5bf07d672a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prvt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-00096c115f9969b64",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00096c115f9969b64",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-09abe1082357f09ec",
            "private_dns": "ip-10-20-90-200.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.90.200",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d988e8bf3157c98e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090d18d67f3f1244a",
            "tags": {
              "Name": "prvt1"
            },
            "tags_all": {
              "Name": "prvt1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c260f6ac0680d3bb"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prvt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-03e207de92ef90673",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-03e207de92ef90673",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0604349854a553e92",
            "private_dns": "ip-10-20-90-7.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.90.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-033f36a152dfd4130",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090d18d67f3f1244a",
            "tags": {
              "Name": "prvt2"
            },
            "tags_all": {
              "Name": "prvt2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c260f6ac0680d3bb"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prvt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0530460090c4c0411",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0530460090c4c0411",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02bb5d3b5fcca6114",
            "private_dns": "ip-10-20-90-251.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.90.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d3bc033491de98bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090d18d67f3f1244a",
            "tags": {
              "Name": "prvt3"
            },
            "tags_all": {
              "Name": "prvt3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c260f6ac0680d3bb"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prvt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0065221b87a7e17ac",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0065221b87a7e17ac",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9587101bd54a210",
            "private_dns": "ip-10-20-90-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.90.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0594e4ea191c99ff7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090d18d67f3f1244a",
            "tags": {
              "Name": "prvt4"
            },
            "tags_all": {
              "Name": "prvt4"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c260f6ac0680d3bb"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "prvt5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0264e027bb01b7968",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0264e027bb01b7968",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aada296dad78558d",
            "private_dns": "ip-10-20-90-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.20.90.243",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f3dd0f5329b0180",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-090d18d67f3f1244a",
            "tags": {
              "Name": "prvt5"
            },
            "tags_all": {
              "Name": "prvt5"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c260f6ac0680d3bb"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-042167f251e25b717",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042167f251e25b717",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b7296e905c88d4f3",
            "private_dns": "ip-10-0-90-241.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.90.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c797f2dd150f5bf4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa8af71e92fddf6e",
            "tags": {
              "Name": "pub-a"
            },
            "tags_all": {
              "Name": "pub-a"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed5bdedf742b8385"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-021a040e09f50bd42",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-021a040e09f50bd42",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-000ba9dafa6ffc050",
            "private_dns": "ip-10-0-90-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.90.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ca4c89fa33d35050",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa8af71e92fddf6e",
            "tags": {
              "Name": "pub-b"
            },
            "tags_all": {
              "Name": "pub-b"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed5bdedf742b8385"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0553ffa5d471e9431",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0553ffa5d471e9431",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-082c5ad10f429df21",
            "private_dns": "ip-10-0-90-74.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.90.74",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01fa89271a7e3868c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa8af71e92fddf6e",
            "tags": {
              "Name": "pub-c"
            },
            "tags_all": {
              "Name": "pub-c"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed5bdedf742b8385"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-d",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-08189f0695bc234d3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08189f0695bc234d3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01252408a80c86802",
            "private_dns": "ip-10-0-90-195.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.90.195",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09b654d5e866ad713",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa8af71e92fddf6e",
            "tags": {
              "Name": "pub-d"
            },
            "tags_all": {
              "Name": "pub-d"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed5bdedf742b8385"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pub-e",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0cff7528ff583bf9a",
            "arn": "arn:aws:ec2:us-east-1:745596943124:instance/i-0fa21603b64bf51c9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fa21603b64bf51c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-033cf67f58cad3f6f",
            "private_dns": "ip-10-0-90-183.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.90.183",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01b84902e4aa51e4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fa8af71e92fddf6e",
            "tags": {
              "Name": "pub-e"
            },
            "tags_all": {
              "Name": "pub-e"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ed5bdedf742b8385"
            ]
          },
          "dependencies": [
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC_1_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:internet-gateway/igw-0aa1935cca1a6a037",
            "id": "igw-0aa1935cca1a6a037",
            "owner_id": "745596943124",
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "VPC_2_IGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:internet-gateway/igw-03c5e38d31caae201",
            "id": "igw-03c5e38d31caae201",
            "owner_id": "745596943124",
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALBforVPC1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC1/a74ff9dc83a1c53c",
            "arn_suffix": "app/ALBforVPC1/a74ff9dc83a1c53c",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALBforVPC1-2144984704.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC1/a74ff9dc83a1c53c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALBforVPC1",
            "security_groups": [
              "sg-05d0135921c35b4b2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bce94a5654ee59a1"
              },
              {
                "subnet_id": "subnet-0ca2fb68e4ba5ffff"
              },
              {
                "subnet_id": "subnet-0fa8af71e92fddf6e"
              }
            ],
            "subnets": [
              "subnet-0bce94a5654ee59a1",
              "subnet-0ca2fb68e4ba5ffff",
              "subnet-0fa8af71e92fddf6e"
            ],
            "tags": {
              "Environment": "prod",
              "Name": "ALBforVPC1"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "ALBforVPC1"
            },
            "vpc_id": "vpc-02cc9753be02d23a8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.VPC1ALBsg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_subnet.pub3",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ALBforVPC2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC2/25b1cb3623f76403",
            "arn_suffix": "app/ALBforVPC2/25b1cb3623f76403",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALBforVPC2-14848154.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC2/25b1cb3623f76403",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALBforVPC2",
            "security_groups": [
              "sg-0514c0ca1dbf19f79"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-002fd35696a3429ae"
              },
              {
                "subnet_id": "subnet-090d18d67f3f1244a"
              },
              {
                "subnet_id": "subnet-0b1a0543c30a6703d"
              }
            ],
            "subnets": [
              "subnet-002fd35696a3429ae",
              "subnet-090d18d67f3f1244a",
              "subnet-0b1a0543c30a6703d"
            ],
            "tags": {
              "Environment": "Test2",
              "Name": "ALBforVPC2"
            },
            "tags_all": {
              "Environment": "Test2",
              "Name": "ALBforVPC2"
            },
            "vpc_id": "vpc-0a440e90c38388cc4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.VPC2ALBSG",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.private3",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "VPC-1-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:listener/app/ALBforVPC1/a74ff9dc83a1c53c/99314344049e55c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:listener/app/ALBforVPC1/a74ff9dc83a1c53c/99314344049e55c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC1/a74ff9dc83a1c53c",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALBforVPC1",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1ALBsg",
            "aws_subnet.pub1",
            "aws_subnet.pub2",
            "aws_subnet.pub3",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "VPC-2-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:listener/app/ALBforVPC2/25b1cb3623f76403/a0a4143f3156640f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:listener/app/ALBforVPC2/25b1cb3623f76403/a0a4143f3156640f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:loadbalancer/app/ALBforVPC2/25b1cb3623f76403",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ALBforVPC2",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2ALBSG",
            "aws_subnet.private1",
            "aws_subnet.private2",
            "aws_subnet.private3",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "VPC1targetgroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "arn_suffix": "targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "VPC1targetgroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "VPC2targetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "arn_suffix": "targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "VPC2targetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Fifth_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6-20220724123541079600000008",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "target_id": "i-0264e027bb01b7968"
          },
          "dependencies": [
            "aws_instance.prvt5",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "First_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6-20220724123539843800000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "target_id": "i-00096c115f9969b64"
          },
          "dependencies": [
            "aws_instance.prvt1",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Fourth_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6-20220724123541079700000009",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "target_id": "i-0065221b87a7e17ac"
          },
          "dependencies": [
            "aws_instance.prvt4",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Second_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6-2022072412361166500000000a",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "target_id": "i-03e207de92ef90673"
          },
          "dependencies": [
            "aws_instance.prvt2",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "Third_Attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6-20220724123540838700000007",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC2targetGroup/3ba17e6192be4ce6",
            "target_id": "i-0530460090c4c0411"
          },
          "dependencies": [
            "aws_instance.prvt3",
            "aws_lb_target_group.VPC2targetGroup",
            "aws_security_group.VPC2InstanceSG",
            "aws_subnet.private1",
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fifthAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9-20220724123539843700000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "target_id": "i-0fa21603b64bf51c9"
          },
          "dependencies": [
            "aws_instance.pub-e",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "firstAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9-20220724123540147900000005",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "target_id": "i-042167f251e25b717"
          },
          "dependencies": [
            "aws_instance.pub-a",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "fourthAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9-20220724123540126100000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "target_id": "i-08189f0695bc234d3"
          },
          "dependencies": [
            "aws_instance.pub-d",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "secondAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9-20220724123540201800000006",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "target_id": "i-021a040e09f50bd42"
          },
          "dependencies": [
            "aws_instance.pub-b",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "thirdAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9-20220724123539843500000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:745596943124:targetgroup/VPC1targetgroup/d15c2187232c16c9",
            "target_id": "i-0553ffa5d471e9431"
          },
          "dependencies": [
            "aws_instance.pub-c",
            "aws_lb_target_group.VPC1targetgroup",
            "aws_security_group.VPC1InstanceSG",
            "aws_subnet.pub1",
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC1ALBsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-05d0135921c35b4b2",
            "description": "Security_group_for_ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05d0135921c35b4b2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP for VPC_1_ALB_sg",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC_1_ALB_sg",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC_1_ALB_sg"
            },
            "tags_all": {
              "Name": "VPC_1_ALB_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC1InstanceSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-0ed5bdedf742b8385",
            "description": "Security_group_for_instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed5bdedf742b8385",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP VPC2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS VPC2",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC1InstanceSG",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC1InstanceSG"
            },
            "tags_all": {
              "Name": "VPC1InstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC2ALBSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-0514c0ca1dbf19f79",
            "description": "Security_group_for_instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0514c0ca1dbf19f79",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC_2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "VPC_2_ALB_SG",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC_2_ALB_SG"
            },
            "tags_all": {
              "Name": "VPC_2_ALB_SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "VPC2InstanceSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:security-group/sg-0c260f6ac0680d3bb",
            "description": "Security_group_for_instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c260f6ac0680d3bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP VPC2",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS VPC2",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "VPC2InstanceSG",
            "name_prefix": "",
            "owner_id": "745596943124",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "VPC2InstanceSG"
            },
            "tags_all": {
              "Name": "VPC2InstanceSG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-090d18d67f3f1244a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.90.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090d18d67f3f1244a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1a",
              "Name": "private1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1a",
              "Name": "private1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-002fd35696a3429ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.80.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002fd35696a3429ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1b",
              "Name": "private2",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1b",
              "Name": "private2",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0b1a0543c30a6703d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.70.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1a0543c30a6703d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1c",
              "Name": "private3",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1c",
              "Name": "private3",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-048b8064e70d0ba5c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-048b8064e70d0ba5c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1d",
              "Name": "private4",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1d",
              "Name": "private4",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-01b549201f23b39b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.20.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b549201f23b39b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1e",
              "Name": "private5",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1e",
              "Name": "private5",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0b50a4320dc5313a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.20.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b50a4320dc5313a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1f",
              "Name": "private6",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1f",
              "Name": "private6",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-047f983c1e3b3f164",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-047f983c1e3b3f164",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1a",
              "Name": "private7",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1a",
              "Name": "private7",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-0a440e90c38388cc4"
          },
          "dependencies": [
            "aws_vpc.VPC_2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0fa8af71e92fddf6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.90.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa8af71e92fddf6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1a",
              "Name": "1a_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1a",
              "Name": "1a_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0ca2fb68e4ba5ffff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.80.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca2fb68e4ba5ffff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1b",
              "Name": "1b_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1b",
              "Name": "1b_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0bce94a5654ee59a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.70.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bce94a5654ee59a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1c",
              "Name": "1c_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1c",
              "Name": "1c_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0549f310bb92ccbf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.60.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0549f310bb92ccbf1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1d",
              "Name": "1d_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1d",
              "Name": "1d_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-0f059ec60ecc77190",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f059ec60ecc77190",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1e",
              "Name": "1e_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1e",
              "Name": "1e_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:subnet/subnet-04593b9ebe2cb3ad8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04593b9ebe2cb3ad8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "745596943124",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Location": "us-east-1f",
              "Name": "1f_1",
              "Owner": "Rich"
            },
            "tags_all": {
              "Location": "us-east-1f",
              "Name": "1f_1",
              "Owner": "Rich"
            },
            "vpc_id": "vpc-02cc9753be02d23a8"
          },
          "dependencies": [
            "aws_vpc.VPC_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:vpc/vpc-02cc9753be02d23a8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0375eeb1c797d64da",
            "default_route_table_id": "rtb-0144fb6b2b7090883",
            "default_security_group_id": "sg-06c93e831851e4908",
            "dhcp_options_id": "dopt-01a2e8a7f50ce9b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02cc9753be02d23a8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0144fb6b2b7090883",
            "owner_id": "745596943124",
            "tags": {
              "Name": "VPC_1"
            },
            "tags_all": {
              "Name": "VPC_1"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:745596943124:vpc/vpc-0a440e90c38388cc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-068f58a3afb010d37",
            "default_route_table_id": "rtb-01f6ce52cd347300d",
            "default_security_group_id": "sg-0a27a3bab1d9d1888",
            "dhcp_options_id": "dopt-01a2e8a7f50ce9b68",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a440e90c38388cc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01f6ce52cd347300d",
            "owner_id": "745596943124",
            "tags": {
              "Name": "VPC_2"
            },
            "tags_all": {
              "Name": "VPC_2"
            }
          }
        }
      ]
    }
  ]
}